--- a/Sol_K4nvasMarket/K4nvas.Market.Common/K4nvas.Market.Common.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Common/K4nvas.Market.Common.csproj
@@ -71,6 +71,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\PasswordBoxAssistant.cs" />
+    <Compile Include="Helpers\ViewActivator.cs" />
+    <Compile Include="Helpers\ViewActivator\IViewActivator.cs" />
+    <Compile Include="Helpers\ViewActivator\RibbonActivator.cs" />
     <Compile Include="Infraestructure\RegionNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
