--- a/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/K4nvas.Market.Module.Seguridad.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/K4nvas.Market.Module.Seguridad.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Fluent">
+      <HintPath>..\K4nvas.Libraries\Fluent.dll</HintPath>
+    </Reference>
     <Reference Include="MahApps.Metro">
       <HintPath>..\K4nvas.Libraries\MahApps.Metro.dll</HintPath>
     </Reference>
@@ -66,9 +69,14 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Activities" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -82,14 +90,32 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeguridadModule.cs" />
     <Compile Include="ViewModel\Interface\ILoginViewModel.cs" />
+    <Compile Include="ViewModel\Interface\IRibbonCajeroViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="ViewModel\RibbonCajeroViewModel.cs" />
+    <Compile Include="View\HomeView.xaml.cs">
+      <DependentUpon>HomeView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Interface\IHomeView.cs" />
     <Compile Include="View\Interface\ILoginView.cs" />
+    <Compile Include="View\Interface\IRibbonCajeroView.cs" />
     <Compile Include="View\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\RibbonCajeroView.xaml.cs">
+      <DependentUpon>RibbonCajeroView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="View\HomeView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\LoginView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\RibbonCajeroView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
