--- a/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/K4nvas.Market.Module.Seguridad.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/K4nvas.Market.Module.Seguridad.csproj
@@ -131,6 +131,10 @@
       <Name>K4nvas.Market.Ventas</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModel\Flyout\" />
+    <Folder Include="View\Flyout\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
