--- a/Sol_K4nvasMarket/K4nvas.Market.Common/K4nvas.Market.Common.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Common/K4nvas.Market.Common.csproj
@@ -77,7 +77,9 @@
     <Compile Include="Infraestructure\RegionNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Snippets\TestSnippet.snippet" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
