Remove innecesarie Usings

--- a/Sol_K4nvasMarket/K4nvas.Market.Common/K4nvas.Market.Common.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Common/K4nvas.Market.Common.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Snippets\K4nvas.snippet" />
     <None Include="Snippets\TestSnippet.snippet" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
