--- a/Sol_K4nvasMarket/K4nvas.Market.Domain/K4nvas.Market.Domain.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Domain/K4nvas.Market.Domain.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\TestDomain.cs" />
+    <Compile Include="Ventas\VentasDomain.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\K4nvas.Market.Domain.Contract\K4nvas.Market.Domain.Contract.csproj">
