--- a/Sol_K4nvasMarket/K4nvas.Market.Model/K4nvas.Market.Model.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Model/K4nvas.Market.Model.csproj
@@ -43,7 +43,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\TestData.cs" />
+    <Compile Include="Ventas\Categoria.cs" />
+    <Compile Include="Ventas\ListaCategoria.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
