--- a/Sol_K4nvasMarket/K4nvas.Market.Proxies/K4nvas.Market.Proxies.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Proxies/K4nvas.Market.Proxies.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D5A29FE5-47BB-4D24-9EA3-BA1F798CB3A5}</ProjectGuid>
+    <ProjectGuid>{149E4A8E-20F4-4B20-97DA-ED8D07C5BC9A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>K4nvas.Market.Repository.Contract</RootNamespace>
-    <AssemblyName>K4nvas.Market.Repository.Contract</AssemblyName>
+    <RootNamespace>K4nvas.Market.Proxies</RootNamespace>
+    <AssemblyName>K4nvas.Market.Proxies</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,14 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test\ITestRepository.cs" />
-    <Compile Include="Ventas\IVentasRepository.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\K4nvas.Market.Model\K4nvas.Market.Model.csproj">
-      <Project>{571177e5-6afc-4470-8a49-27786c5d05b5}</Project>
-      <Name>K4nvas.Market.Model</Name>
-    </ProjectReference>
+    <Compile Include="Ventas\ServicioVentas.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
