--- a/Sol_K4nvasMarket/K4nvas.Market.Service.Contract/K4nvas.Market.Service.Contract.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Service.Contract/K4nvas.Market.Service.Contract.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\ITestService.cs" />
+    <Compile Include="Ventas\IVentasService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\K4nvas.Market.Model\K4nvas.Market.Model.csproj">
