--- a/Sol_K4nvasMarket/K4nvas.Market.Service/K4nvas.Market.Service.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.Service/K4nvas.Market.Service.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\TestService.cs" />
+    <Compile Include="Ventas\VentasService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\K4nvas.Market.Domain.Contract\K4nvas.Market.Domain.Contract.csproj">
