--- a/Sol_K4nvasMarket/K4nvas.Market.ServiceController/K4nvas.Market.ServiceController.csproj
+++ b/Sol_K4nvasMarket/K4nvas.Market.ServiceController/K4nvas.Market.ServiceController.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D5A29FE5-47BB-4D24-9EA3-BA1F798CB3A5}</ProjectGuid>
+    <ProjectGuid>{6CE638A6-09A6-4412-BC15-5E605CE08AE2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>K4nvas.Market.Repository.Contract</RootNamespace>
-    <AssemblyName>K4nvas.Market.Repository.Contract</AssemblyName>
+    <RootNamespace>K4nvas.Market.ServiceController</RootNamespace>
+    <AssemblyName>K4nvas.Market.ServiceController</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,13 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test\ITestRepository.cs" />
-    <Compile Include="Ventas\IVentasRepository.cs" />
+    <Compile Include="Ventas\VentasServiceController.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\K4nvas.Market.Model\K4nvas.Market.Model.csproj">
-      <Project>{571177e5-6afc-4470-8a49-27786c5d05b5}</Project>
-      <Name>K4nvas.Market.Model</Name>
+    <ProjectReference Include="..\K4nvas.Market.Proxies\K4nvas.Market.Proxies.csproj">
+      <Project>{149e4a8e-20f4-4b20-97da-ed8d07c5bc9a}</Project>
+      <Name>K4nvas.Market.Proxies</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
