--- a/Sol_K4nvasMarket/K4nvas.Market.Shell/App.config
+++ b/Sol_K4nvasMarket/K4nvas.Market.Shell/App.config
@@ -3,4 +3,19 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="HTTP_Ventas" maxBufferPoolSize="2147483647" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" receiveTimeout="00:10:00" sendTimeout="00:10:00">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+
+    <client>
+      <endpoint address="http://localhost:64967/Ventas/ServicioVentas.svc" binding="basicHttpBinding" bindingConfiguration="HTTP_Ventas"
+                 contract="K4nvas.Market.Proxies.Ventas.ServicioVentas.IVentasService" name="HTTP_Ventas">
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
