--- a/Sol_K4nvasMarket/K4nvas.Market.ServiceHost/Web.config
+++ b/Sol_K4nvasMarket/K4nvas.Market.ServiceHost/Web.config
@@ -8,6 +8,11 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5"/>
   </system.web>
+
+  <connectionStrings>
+    <add name="Cn_Market" connectionString="server=127.0.0.1;User Id=root;password=mysql;database=bd_market" providerName="MySql.Data.MySqlClient"/>
+  </connectionStrings>
+  
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
